Issue #50. Make share button more noticeable. Make it align with right side of media, and make font larger.

--- a/app/assets/stylesheets/avalon.css.scss
+++ b/app/assets/stylesheets/avalon.css.scss
@@ -776,6 +776,7 @@ a[data-trigger='submit'] {
     text-decoration: none;
     outline: 0;
   }
+  font-size: larger;
 }
 #share-list .tab-content {
   margin-bottom: 20px;
